# raye-global-pathfinding

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeLists.txtOLD  CONTRIBUTING.md  LICENSE.md  Path.kml  README.md  Wind.csv  Wind.kml  angles2d-0.csv  angles2d-1.csv  angles2d-2.csv  angles2d-3.csv  angles2d-6.csv  azure-pipelines.yml  configure  finallaunch  lats2d.csv  lons2d.csv  magnitudes2d-0.csv  magnitudes2d-1.csv  magnitudes2d-2.csv  magnitudes2d-3.csv  magnitudes2d-9.csv  package.xml  runpathfinder
cached_planets/: size_1.txt  size_2.txt  size_3.txt  size_4.txt  size_5.txt  size_6.txt
input_csvs/: angles2d-0.csv  angles2d-1.csv  angles2d-2.csv  angles2d-3.csv  angles2d-9.csv  lats2d.csv  lons2d.csv  magnitudes2d-0.csv  magnitudes2d-1.csv  magnitudes2d-2.csv  magnitudes2d-3.csv
install_deps/: README.md  install_deps_linux.sh  install_deps_osx.sh  install_deps_windows.bat
launch/: pathfinding_loop.launch
lib/: core_libs.cmake
projects/: CMakeLists.txt  README.md
projects/example/: CMakeLists.txt  README.md  main.cpp
projects/gribparser/: CMakeLists.txt  StandardCalc.cpp  StandardCalc.h  data.grb  fileParse.cpp  fileParse.h  gribParse.cpp  gribParse.h  main.cpp  urlBuilder.cpp  urlBuilder.h  urlDownloader.cpp  urlDownloader.h  windGribParse.cpp  windGribParse.h
projects/utilities/: CMakeLists.txt  README.md
projects/utilities/example_utility/: CMakeLists.txt  main.cpp
projects/utilities/pathfinder_cli/: CMakeLists.txt  main.cpp
projects/utilities/pathfinder_cli/network_table_api/: Connection.h  Exceptions.h  Help.h  NonProtoConnection.h
projects/utilities/pathfinder_loop/: CMakeLists.txt  main.cpp
projects/viewer/: ArcBall.cpp  ArcBall.h  CMakeLists.txt  Camera.cpp  Camera.h  ColourUtils.h  Controls.cpp  Controls.h  EdgeRenderer.cpp  EdgeRenderer.h  EdgeUtils.cpp  EdgeUtils.h  PlanetRenderer.cpp  PlanetRenderer.h  Program.cpp  Program.h  README.md  Shader.cpp  Shader.h  edge_frag.glsl  edge_geom.glsl  edge_vert.glsl  frag.glsl  main.cpp  planet_frag.glsl  planet_vert.glsl  vert.glsl
scripts/: cpplint.py  run_cppcheck.sh  run_cpplint.sh
src/: CMakeLists.txt
src/common/: GeneralDefs.h  ProgressBar.h
src/core/: HexPlanet.cpp  HexPlanet.h  hexplanet.cpp  hexplanet.h
src/datatypes/: GPSCoordinate.cpp  GPSCoordinate.h  GPSCoordinateFast.cpp  GPSCoordinateFast.h  HexDefs.h  HexTile.cpp  HexTile.h  HexTri.cpp  HexTri.h  HexTriangle.cpp  HexTriangle.h  HexVertex.cpp  HexVertex.h  MapData.h  Node.cpp  Node.h  WeatherDatum.h
src/example/: Example.cpp  Example.h
src/grib/: UrlBuilder.cpp  UrlBuilder.h  UrlDownloader.cpp  UrlDownloader.h  gribParse.cpp  gribParse.h  urlBuilder.cpp  urlBuilder.h  urlDownloader.cpp  windFileParse.cpp  windFileParse.h
src/logic/: StandardCalc.cpp  StandardCalc.h
src/pathfinding/: AStarPathfinder.cpp  AStarPathfinder.h  AStarVertex.cpp  AStarVertex.h  BasicCostCalculator.cpp  BasicCostCalculator.h  BasicHexMap.cpp  BasicHexMap.h  CostCalculator.h  HaversineCostCalculator.cpp  HaversineCostCalculator.h  HaversineHeuristic.cpp  HaversineHeuristic.h  Heuristic.h  NaiveCostCalculator.cpp  NaiveCostCalculator.h  NaiveHeuristic.cpp  NaiveHeuristic.h  Pathfinder.cpp  Pathfinder.h  PathfinderResultPrinter.cpp  PathfinderResultPrinter.h  TotalCostCalculator.cpp  TotalCostCalculator.h  WeatherCostCalculator.cpp  WeatherCostCalculator.h  WeatherHexMap.cpp  WeatherHexMap.h
src/planet/: HexPlanet.cpp  HexPlanet.h
test/: CMakeLists.txt
test/basic_tests/: CMakeLists.txt
test/basic_tests/core/: HexPlanetTest.cpp  HexPlanetTest.h
test/basic_tests/datatypes/: GPSCoordinateTest.cpp  GPSCoordinateTest.h  HexVertexTest.cpp  HexVertexTest.h
test/basic_tests/example/: ExampleTest.cpp  ExampleTest.h
test/basic_tests/grib/: FileParseWindTest.cpp  FileParseWindTest.h  WindFileParseTest.cpp  WindFileParseTest.h
test/basic_tests/logic/: StandardCalcTest.cpp  StandardCalcTest.h
test/basic_tests/pathfinding/: AStarPathfinderTest.cpp  AStarPathfinderTest.h  BasicCostCalculatorTest.cpp  BasicCostCalculatorTest.h  BasicHexMapTest.cpp  BasicHexMapTest.h  HexPlanetTest.cpp  HexPlanetTest.h  MockCostCalculator.cpp  MockCostCalculator.h  WeatherCostCalculatorTest.cpp  WeatherCostCalculatorTest.h  WeatherHexMapTest.cpp  WeatherHexMapTest.h
test/basic_tests/planet/: HexPlanetTest.cpp  HexPlanetTest.h
